[package]
name = "sdl2_image"
version = "0.0.33"
authors = ["xsleonard"]
description = "SDL2_image bindings and wrappers"
license = "MIT"
repository = "https://github.com/xsleonard/rust-sdl2_image"
keywords = ["SDL2"]

[lib]
name = "sdl2_image"
path = "src/sdl2_image/lib.rs"

[dependencies]
bitflags = "0.1.1"
sdl2 = "0.0.33"

[dependencies.sdl2-sys]
git = "https://github.com/waucka/sdl2-sys"

[[bin]]
name = "demo"
path = "src/demo/main.rs"
